--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -17,6 +17,7 @@
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-redux": "^8.1.1",
