--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "mdb-react-ui-kit": "^6.1.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.15.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "styled-components": "^6.0.3",
     "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
   },
