--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -20,6 +20,7 @@
     "mdb-react-ui-kit": "^6.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-awesome-calendar": "^1.0.14",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
