--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "reselect": "^4.1.8",
     "styled-components": "^6.0.3",
     "sweetalert2": "^11.7.12",
     "web-vitals": "^2.1.4"
