--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-input-emoji": "^5.1.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
