--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "reselect": "^4.1.8",
     "styled-components": "^6.0.3",
