--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "mdb-react-ui-kit": "^6.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
