--- a/Client/cms-client/package.json
+++ b/Client/cms-client/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-icons": "^4.10.1",
     "react-input-emoji": "^5.1.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
