--- a/socket/package.json
+++ b/socket/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "pm2 start app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
     "socket.io": "^4.7.2"
   }
 }
